<resources>
    <string name="app_name">FABS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="intent_activity">ACTIVITY</string>
    <string name="intent_fragment">FRAGMENT</string>
    <string name="intent_movie_id">ID</string>
    <string name="intent_sort_order">SORT_ORDER</string>
    <string name="intent_query">QUERY</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_donate">Donate</string>
    <string name="title_activity_movie_details">Film Details</string>
    <string name="title_activity_search_results">Search Results</string>

    <string name="title_fragment_completed_movies">Completed Films</string>
    <string name="title_fragment_plan_to_watch_movies">Plan to Watch</string>
    <string name="title_fragment_my_movies">My Collection</string>
    <string name="title_fragment_now_in_theaters_movies">Now in Theaters</string>
    <string name="title_fragment_popular_movies">Popular Films</string>
    <string name="title_fragment_top_rated_movies">Top Rated Films</string>
    <string name="title_fragment_upcoming_movies">Upcoming Films</string>

    <string name="preference_file_key">preferencesGlobal</string>

    <string name="pref_previously_started">prevStarted</string>
    <string name="pref_pages_loaded_popular_movies">loadedPopularMovies</string>
    <string name="pref_pages_loaded_top_rated_movies">loadedTopRatedMovies</string>
    <string name="pref_pages_loaded_upcoming_movies">loadedUpcomingMovies</string>
    <string name="pref_pages_loaded_theaters_movies">loadedTheatersMovies</string>
    <string name="pref_discover_movies_state">discoverMoviesState</string>
    <string name="pref_my_movies_state">myMoviesState</string>

    <string name="search_hint">Search...</string>
    <string name="search_more">Press the Enter key to search in the entire database</string>
    <string name="search_nothing">Nothing found</string>

    <string name="my_collection">My Collection</string>
    <string name="completed">Completed</string>
    <string name="plan_to_watch">Plan to Watch</string>
    <string name="discover">Discover</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="now_in_theaters">Now in Theaters</string>
    <string name="upcoming">Upcoming</string>
    <string name="settings">Settings</string>

    <string-array name="list_movie_status">
        <item>STATUS</item>
        <item>COMPLETED</item>
        <item>PLAN TO WATCH</item>
    </string-array>

    <string-array name="list_personal_score">
        <item>SCORE: —</item>
        <item>(1) Appalling</item>
        <item>(2) Horrible</item>
        <item>(3) Very Bad</item>
        <item>(4) Bad</item>
        <item>(5) Average</item>
        <item>(6) Fine</item>
        <item>(7) Good</item>
        <item>(8) Very Good</item>
        <item>(9) Great</item>
        <item>(10) Masterpiece</item>
        <item>SCORE: 1</item>
        <item>SCORE: 2</item>
        <item>SCORE: 3</item>
        <item>SCORE: 4</item>
        <item>SCORE: 5</item>
        <item>SCORE: 6</item>
        <item>SCORE: 7</item>
        <item>SCORE: 8</item>
        <item>SCORE: 9</item>
        <item>SCORE: 10</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
